need to fix padding on mobile

--- a/app/assets/stylesheets/redesign/_footer.css.scss
+++ b/app/assets/stylesheets/redesign/_footer.css.scss
@@ -19,7 +19,6 @@
 	}
 
 	@media(max-width: 768px){
-		padding-top: 0;
 		padding-left: 1rem;
 		padding-right: 1rem;
 	}
